<resources>
    <string name="app_name">Din Sykkelvei</string>

    <string name="action_settings"><strike>Innstillinger</strike></string>
    <string name="lang_norwegian">Norsk BO</string>
    <string name="lang_english">English</string>

    <string name="biking_idle">Start</string>
    <string name="environment_page">Miljø</string>
    <string name="statistics_page">Tall</string>
    <string name="statistics_header">Statistikk</string>
    <string name="info_page">Info</string>

    <!--IntroductionMenu-->
    <string name="intro_page1">All GPS-data samles inn anonymt. I tillegg registreres ikke  de første og siste 100 meterne av turen for å beskytte din identitet.</string>
    <string name="intro_page2">Denne appen sender informasjon videre til Statens vegvesen for bruk i deres analyse av dagens situasjon for syklister på veinettet.</string>
    <string name="intro_page3">Ved å bruke appen bidrar du til å gi Statens vegvesen innsikt i hvilke sykkelruter som er populære, samt hvor det eksisterer veifeil eller tilsvarende som må utbedres.</string>
    <string name="intro_page5">Å bruke denne appen forbedrer din sykkelhverdag!</string>
    <string name="go_to_app">Gå til app</string>

    <!--UserInformationTab-->
    <string name="intro_userInformation"> Denne informasjonen er helt valgfri og vil bli brukt som en del av sykkeldataanalysen. Vi ville satt veldig pris på om du fyller ut. Vekt blir kun brukt til kaloriberegning lokalt i appen.</string>
    <string name="UserInformation">Brukerinformasjon</string>
    <string name="PickBirthDate">ÅÅÅÅ</string>
    <string name="InfoPickBirthDate">Fødselsår:</string>
    <string name="Male">Mann</string>
    <string name="Female">Kvinne</string>
    <string name="infoWeight">Vekt (kg):</string>
    <string name="infoSurvey">Motta spørreundersøkelser</string>
    <string name="birthdate_saved">Fødselsdato er nå lagret</string>
    <string name="weight_saved">Vekt er nå lagret</string>
    <string name="intro_page4">Språket i appen kan forandres ved å bytte språk i Android-instillingene. </string>
    <string name="save">Lagre</string>

    <!--OptionsTab-->
    <string name="OptionsTab">Innstillinger</string>
    <string name="option_information">Anonym data til analyse. Vekt brukes kun til kaloriberegning lokalt.</string>

    <!--Load Screen-->
    <string name="no_progress">No Progress</string>

    <!--Map-->
    <string name="back">Tilbake</string>

    <!-- Biking idle -->
    <string name="start_trip">START TUR</string>

    <!--Error Screen -->
    <string name="error_page">Feilrapport</string>
    <string name="finished_editing">OK</string>
    <string name="take_picture">Ta bilde</string>
    <string name="description">Beskrivelse</string>
    <string name="add_description">Legg til beskrivelse</string>
    <string name="photo_saved">Bilde er nå lagret</string>
    <string name="description_saved">Beskrivelse er nå lagret</string>
    <string name="error_saved">Veiproblem er nå lagret</string>


    <!--Result Screen -->
    <string name="result_page">Resultat</string>
    <string name="mainScreen">Hovedside</string>
    <string name="popupError">Veiproblemer</string>
    <string name="noErrorsReported">Ingen rapporterte veiproblemer</string>
    <string name="map_description">Se reiserute</string>
    <string name="errorsList">Velg veiproblem</string>
    <string name="errorDialog">Veiproblemer</string>
    <string name="roadFault">Veiproblem</string>
    <string name="survey">Spørreundersøkelse</string>
    <string name="cancel">Avbryt</string>
    <string name="sendSurvey">Send</string>
    <string name="linkSurvey">Link til spørreundersøkelse</string>

    <!-- Environment -->
    <string name="environment_title"><u>CO&#8322; spart i dag</u></string>
    <string name="environment_comparement">Hvilket er det samme som: </string>
    <string name="environment_car">km med bil</string>
    <string name="environment_airplane">km med fly</string>
    <string name="environment_train">km med tog</string>
    <string name="environment_bus">km med buss</string>

    <!-- Statistics -->
    <string name="stats_header"><u>Tall</u></string>
    <string name="co2_spart">CO&#8322; spart:</string>
    <string name="distance_traveled">Distanse:</string>
    <string name="avg_speed">Gj.fart: </string>
    <string name="calories_burned">kcal forbrent:</string>
    <string name="Time">Tid: </string>
    <string name="Errors">Rediger veiproblem: </string>
    <string name="daily_display">1 dag</string>
    <string name="weekly_display">1 uke</string>
    <string name="monthhly_display">1 mnd</string>
    <string name="zero_kmph"> 0.0 km/t</string>
    <string name="kmph">km/t</string>

    <!-- Information -->
    <string name="information_title"><u>Informasjon</u></string>
    <string name="contact">Kontakt oss: DinSykkelvei@gmail.no</string>
    <string name="rewatch_intro">Se introduksjon om igjen</string>

    <!--Error handler -->
    <string name="report_error">Beskriv problem:\n(Bilde kan ikke legges til senere)</string>
    <string name="report_errorIdle">Beskriv problem:</string>
    <string name="later">Senere</string>
    <string name="now">Nå</string>

    <!--Error dialog for when network is not active on startup -->
    <string name="require_network_on_startup">Nettverk er nødvendig ved oppstart!</string>

    <!--Confirmation -->
    <string name="stop_biking">Avslutt tur?\nMerk at nettverk må være påslått!</string>
    <string name="yes">Ja</string>
    <string name="no">Nei</string>

    <!-- Biking active -->

    <string name="location_dialog">Din GPS ser ut til å være avslått, vil du slå den på?</string>
    <string name="biking_active"><u>Sykling pågår</u></string>
    <string name="report_problem">Rapporter veiproblem</string>
    <string name="require_network_stop_trip">Du har ikke internettforbindelse</string>
    <string name="stopped_automatically">Turen ble avsluttet</string>
    <string name="stopped_automatically_long">På grunn av liten aktivitet siste ti minutter.</string>

    <!--Profile strings-->
    <string name="isLoggedInn">isLoggedInn</string>

    <!--PUBLIC FINAL STRINGS-->
    <!--Consider making these strings unreadable-->
    <string name="statisticsData">statisticsData</string>
    <string name="profile_preferences">UserPrefsFile</string>
    <string name="userInfo">userInfo</string>

</resources>
