<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/statistics_page"
        android:textSize="30dp"
        android:id="@+id/textView7"
        android:layout_marginTop="93dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/co2_spart"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_toStartOf="@+id/textView7"
        android:layout_marginTop="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/distance_traveled"
        android:id="@+id/textView9"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/avg_speed"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0 g"
        android:id="@+id/textView11"
        android:layout_marginEnd="30dp"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0 m"
        android:id="@+id/textView12"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignEnd="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0 m/s"
        android:id="@+id/textView13"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignEnd="@+id/textView12" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekly_display"
        android:id="@+id/button3"

        android:background="@drawable/btn_stroke"

        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginBottom="115dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthhly_display"
        android:background="@drawable/btn_stroke"
        android:id="@+id/button4"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignEnd="@+id/textView13" />
</RelativeLayout>