<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/leaf"
        android:layout_marginTop="169dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <com.mobile.countme.custom_views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/environment_title"
        android:id="@+id/textView2"
        android:layout_marginTop="89dp"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <com.mobile.countme.custom_views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0 g"
        android:id="@+id/co2_display"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <com.mobile.countme.custom_views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/environment_comparement"
        android:textSize="25dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <com.mobile.countme.custom_views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/environment_car"
        android:id="@+id/car_km"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/co2_display" />

    <com.mobile.countme.custom_views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/environment_airplane"
        android:id="@+id/plain_km"
        android:layout_below="@+id/car_km"
        android:layout_alignStart="@+id/car_km"
        android:layout_marginTop="27dp" />

    <com.mobile.countme.custom_views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/environment_train"
        android:id="@+id/train_km"
        android:layout_below="@+id/plain_km"
        android:layout_alignStart="@+id/plain_km"
        android:layout_marginTop="26dp" />

    <com.mobile.countme.custom_views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/environment_bus"
        android:id="@+id/bus_km"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/train_km"
        android:layout_alignStart="@+id/train_km" />

</RelativeLayout>