<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mobile.countme.custom_views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/UserInformation"
        android:id="@+id/UserInformationHeadLine"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="93dp"
        android:layout_centerHorizontal="true" />

    <com.mobile.countme.custom_views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/intro_userInformation"
        android:id="@+id/userInfoDescription"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="30dp"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/PickBirthDate"
        android:inputType="number"
        android:gravity="center"
        android:maxLength="4"
        android:ems="10"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:id="@+id/editText"
        android:layout_centerVertical="true"
        android:layout_below="@+id/UserInformationHeadLine"
        android:imeOptions="actionDone"
        android:layout_marginTop="60dp"
        android:background="@drawable/input_stroke" />

    <com.mobile.countme.custom_views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/InfoPickBirthDate"
        android:id="@+id/infoPickBirthDate"
        android:layout_alignBaseline="@+id/editText"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/UserInformationHeadLine" />

</RelativeLayout>