<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapBtn"
        android:onClick="goToMaps"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/map_icon"
        android:src="@drawable/btn_highlight"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/map_description"
        android:id="@+id/textView7"
        android:layout_below="@+id/mapBtn"
        android:layout_alignStart="@+id/mapBtn"
        android:layout_marginLeft="-3dp"/>

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/result_page"
        android:textSize="30dp"
        android:id="@+id/titleResult"
        android:layout_marginTop="93dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/co2_spart"
        android:id="@+id/textView8"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/titleResult"
        android:layout_alignParentStart="true" />

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/distance_traveled"
        android:id="@+id/textView9"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/calories_burned"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="15dp" />

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/avg_speed"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView14"
        android:layout_alignStart="@+id/textView14"
        android:layout_marginTop="15dp" />

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Time"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="15dp" />

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Errors"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_marginTop="23dp"/>

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0 g"
        android:id="@+id/co2_saved_result"
        android:layout_alignTop="@+id/textView8"
        android:layout_marginRight="30dp"
        android:layout_alignParentEnd="true" />

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero_kmph"
        android:id="@+id/distance_result"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignEnd="@+id/co2_saved_result" />

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0 kcal"
        android:id="@+id/calories_burned"
        android:layout_alignTop="@+id/textView14"
        android:layout_alignEnd="@+id/co2_saved_result" />

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero_kmph"
        android:id="@+id/avgSpeed_result"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignEnd="@+id/distance_result" />

    <com.mobile.countme.custom_classes.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="01:23:42"
        android:id="@+id/time_used"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignEnd="@+id/distance_result" />

    <!--<Button-->
        <!--android:layout_width="118dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/popupError"-->
        <!--android:onClick="showErrorPopupList"-->
        <!--android:background="@drawable/btn_stroke"-->
        <!--android:id="@+id/popupError"-->
        <!--android:layout_below="@id/textView11"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_alignStart="@id/textView11" />-->

    <Spinner
        android:id="@+id/spinnerErrors"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView11"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/textView12"
        android:background="@drawable/btn_stroke"
        android:spinnerMode="dialog" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainScreen"
        android:onClick="goToMainMenu"
        android:background="@drawable/btn_stroke"
        android:id="@+id/goToMainScreen"
        android:layout_marginTop="188dp"
        android:layout_alignTop="@+id/avgSpeed_result"
        android:layout_alignEnd="@+id/titleResult" />
</RelativeLayout>